Start adding content

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
     "@pinia/nuxt": "^0.1.9",
+    "aria-ui-nuxt": "^1.1.8",
     "pinia": "^2.0.14"
   }
 }
