--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.1.2",
     "@tailwindcss/forms": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
@@ -30,7 +31,7 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "@pinia/nuxt": "^0.1.9",
-    "aria-ui-nuxt": "^1.1.8",
+    "aria-ui-nuxt": "^1.1.14",
     "pinia": "^2.0.14"
   }
 }
