--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
   "devDependencies": {
     "@headlessui/vue": "^0.0.0-insiders.1d53ac3",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/tailwindcss": "^5.1.2",
     "@tailwindcss/forms": "^0.5.2",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.0.1",
     "nuxt": "3.0.0-rc.3",
     "openapi-typescript-codegen": "^0.22.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.7.2"
   },
   "dependencies": {
