--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/luxon": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "autoprefixer": "^10.4.7",
@@ -27,13 +28,18 @@
     "openapi-typescript-codegen": "^0.22.0",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "sass": "^1.52.3",
+    "sass-loader": "^10.2.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.7.2"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "@pinia/nuxt": "^0.1.9",
+    "@vuepic/vue-datepicker": "^3.2.2",
     "humps": "^2.0.1",
-    "pinia": "^2.0.14"
+    "luxon": "^2.4.0",
+    "pinia": "^2.0.14",
+    "v-calendar": "^3.0.0-alpha.8"
   }
 }
