--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/luxon": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "autoprefixer": "^10.4.7",
@@ -33,7 +34,10 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "@pinia/nuxt": "^0.1.9",
+    "@vuepic/vue-datepicker": "^3.2.2",
     "humps": "^2.0.1",
-    "pinia": "^2.0.14"
+    "luxon": "^2.4.0",
+    "pinia": "^2.0.14",
+    "v-calendar": "^3.0.0-alpha.8"
   }
 }
