--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.6",
+    "@heroicons/vue": "1.0.6",
     "@pinia/nuxt": "^0.1.9",
     "@vuepic/vue-datepicker": "^3.2.2",
     "humps": "^2.0.1",
