--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@tailwindcss/forms": "^0.5.2",
     "@types/luxon": "^2.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@vue/eslint-config-airbnb": "^7.0.0",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^9.0.1",
-    "nuxt": "^3.0.0-rc.3",
+    "eslint-plugin-vue": "^9.4.0",
+    "nuxt": "^3.0.0-rc.8",
     "openapi-typescript-codegen": "^0.23.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.6",
-    "@pinia/nuxt": "^0.1.9",
-    "@vuepic/vue-datepicker": "^3.2.2",
+    "@heroicons/vue": "1.0.6",
+    "@pinia/nuxt": "^0.4.1",
+    "@vuepic/vue-datepicker": "^3.4.6",
     "humps": "^2.0.1",
     "luxon": "^2.4.0",
-    "mapbox-gl": "^2.9.2",
+    "mapbox-gl": "^2.10.0",
     "pinia": "^2.0.21",
     "v-calendar": "^3.0.0-alpha.8"
   }
