--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "npm run prettier:check && npm run eslint:check",
     "lint:fix": "npm run prettier:fix && npm run eslint:fix",
     "openapi:generate": "node ./utils/generateAPITypes.js",
-    "build": "nuxt build",
+    "build:dev": "ENVIRONMENT=development nuxt build",
+    "build:staging": "ENVIRONMENT=staging nuxt build",
+    "build:production": "ENVIRONMENT=production nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -34,6 +36,8 @@
   "dependencies": {
     "@heroicons/vue": "1.0.6",
     "@pinia/nuxt": "^0.4.1",
+    "@sentry/tracing": "^7.11.1",
+    "@sentry/vue": "^7.11.1",
     "@vuepic/vue-datepicker": "^3.4.6",
     "humps": "^2.0.1",
     "luxon": "^2.4.0",
