--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "luxon": "^3.0.2",
     "mapbox-gl": "^2.10.0",
     "pinia": "^2.0.21",
-    "v-calendar": "^3.0.0-alpha.8"
+    "v-calendar": "^3.0.0-alpha.8",
+    "vue-gtag-next": "^1.14.0"
   }
 }
