--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@funken-studio/sitemap-nuxt-3": "^3.2.0",
     "@heroicons/vue": "1.0.6",
     "@pinia/nuxt": "^0.4.1",
     "@sentry/tracing": "^7.11.1",
