--- a/.github/workflows/generate-types.yaml
+++ b/.github/workflows/generate-types.yaml
@@ -35,6 +35,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate types
+        run: npm run openapi:generate
+
       - name: Create pull request
         id: create-pull-request
         uses: peter-evans/create-pull-request@v4
