Add missing key

--- a/render.yaml
+++ b/render.yaml
@@ -17,4 +17,5 @@ services:
     buildCommand: 'npm install && npm run build:staging'
     startCommand: 'npm start'
     autoDeploy: false
+    envVars:
       - fromGroup: Frontend
