--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "@pinia/nuxt": "^0.4.1",
     "@sentry/tracing": "^7.11.1",
     "@sentry/vue": "^7.11.1",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.195",
+    "@tiptap/extension-floating-menu": "^2.0.0-beta.195",
+    "@tiptap/starter-kit": "^2.0.0-beta.195",
+    "@tiptap/vue-3": "^2.0.0-beta.195",
     "@vuepic/vue-datepicker": "^3.4.6",
     "humps": "^2.0.1",
     "luxon": "^3.0.3",
