--- a/package.json
+++ b/package.json
@@ -34,16 +34,17 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/list": "^1.7.0",
     "@funken-studio/sitemap-nuxt-3": "^3.2.0",
     "@heroicons/vue": "2.0.11",
     "@pinia/nuxt": "^0.4.1",
     "@sentry/tracing": "^7.11.1",
     "@sentry/vue": "^7.11.1",
-    "@tiptap/extension-bubble-menu": "^2.0.0-beta.195",
-    "@tiptap/extension-floating-menu": "^2.0.0-beta.195",
-    "@tiptap/starter-kit": "^2.0.0-beta.195",
-    "@tiptap/vue-3": "^2.0.0-beta.195",
     "@vuepic/vue-datepicker": "^3.4.6",
+    "editorjs-html": "^3.4.2",
     "humps": "^2.0.1",
     "luxon": "^3.0.3",
     "mapbox-gl": "^2.10.0",
