--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,56 +3,28 @@ name: CI
 on: push
 
 jobs:
-  js-build:
-    name: JavaScript build
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.11.0'
-      - name: Cache Node.js modules
-        uses: actions/cache@v3.0.1
-        with:
-          path: ~/.npm
-          key: node-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            node-${{ runner.os }}-
-      - run: npm install
-      - run: npm run build:production
+  build:
+    uses: danielkjellid/github-actions/.github/workflows/node.yaml@main
+    with:
+      cmd: npm run build:production
 
-  js-lint:
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: 'JavaScript lint: Prettier'
-            target: npm run prettier:check
-          - name: 'JavaScript lint: ESLint'
-            target: npm run eslint:check
-    name: ${{ matrix.name }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.11.0'
-      - name: Cache Node.js modules
-        uses: actions/cache@v3.0.1
-        with:
-          path: ~/.npm
-          key: node-${{ runner.os }}-${{ hashfiles('**/package-lock.json') }}
-          restore-keys: |
-            node-${{ runner.os }}-
-      - run: npm install
-      - run: ${{ matrix.target }}
+  prettier:
+    uses: danielkjellid/github-actions/.github/workflows/node.yaml@main
+    with:
+      cmd: npm run prettier:check
+
+  eslint:
+    uses: danielkjellid/github-actions/.github/workflows/node.yaml@main
+    with:
+      cmd: npm run eslint:check
 
   ci-done:
     # Gather job which deploy workflow can wait on.
     name: CI done
     needs:
-      - js-build
-      - js-lint
+      - build
+      - prettier
+      - eslint
     runs-on: ubuntu-20.04
     steps:
       - run: echo "CI done!"
